Refactor NativeMethods: Updated P/Invoke signatures with proper marshaling and added XML documentation. Fixed charset issues and ensured compatibility.

--- a/VbWorkerServicePinvokeLauncher/VbWorkerServicePinvokeLauncher.vbproj
+++ b/VbWorkerServicePinvokeLauncher/VbWorkerServicePinvokeLauncher.vbproj
@@ -6,11 +6,12 @@
     <UserSecretsId>dotnet-VbWorkerServicePinvokeLauncher-f0c0420a-d871-4424-ae01-e70bfe7ef966</UserSecretsId>
     <RemoveIntegerChecks>true</RemoveIntegerChecks>
     <RootNamespace>VbWorkerServicePinvokeLauncher</RootNamespace>
-    <ImportedNamespaces>Microsoft.Extensions.Configuration=False,Microsoft.Extensions.DependencyInjection=False,Microsoft.Extensions.Hosting=False,Microsoft.Extensions.Logging=False,System.IO=False,System.Net.Http=False,System.Threading=False,Microsoft.VisualBasic=True,System=True,System.Collections=True,System.Collections.Generic=True,System.Diagnostics=True,System.Linq=True,System.Xml.Linq=True,System.Threading.Tasks=True,VbWorkerServicePinvokeLauncher=True</ImportedNamespaces>
+    <ImportedNamespaces>JetBrains.Annotations=False,Microsoft.Extensions.Configuration=False,Microsoft.Extensions.DependencyInjection=False,Microsoft.Extensions.Hosting=False,Microsoft.Extensions.Logging=False,System.IO=False,System.Net.Http=False,System.Runtime.InteropServices=False,System.Threading=False,Microsoft.VisualBasic=True,System=True,System.Collections=True,System.Collections.Generic=True,System.Diagnostics=True,System.Linq=True,System.Xml.Linq=True,System.Threading.Tasks=True,VbWorkerServicePinvokeLauncher=True</ImportedNamespaces>
     <OptionStrict>On</OptionStrict>
   </PropertyGroup>
 
   <ItemGroup>
+    <Import Include="JetBrains.Annotations" />
     <Import Include="Microsoft.Extensions.Configuration" />
     <Import Include="Microsoft.Extensions.DependencyInjection" />
     <Import Include="Microsoft.Extensions.Hosting" />
@@ -21,6 +22,7 @@
     <Import Include="System.Threading" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2024.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0-preview.7.24405.7" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0-preview.7.24405.7" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.0-preview.7.24405.7" />
