--- a/VbWorkerServicePinvokeLauncher/VbWorkerServicePinvokeLauncher.vbproj
+++ b/VbWorkerServicePinvokeLauncher/VbWorkerServicePinvokeLauncher.vbproj
@@ -6,7 +6,7 @@
     <UserSecretsId>dotnet-VbWorkerServicePinvokeLauncher-f0c0420a-d871-4424-ae01-e70bfe7ef966</UserSecretsId>
     <RemoveIntegerChecks>true</RemoveIntegerChecks>
     <RootNamespace>VbWorkerServicePinvokeLauncher</RootNamespace>
-    <ImportedNamespaces>JetBrains.Annotations=False,Microsoft.Extensions.Configuration=False,Microsoft.Extensions.DependencyInjection=False,Microsoft.Extensions.Hosting=False,Microsoft.Extensions.Logging=False,System.Diagnostics.CodeAnalysis=False,System.IO=False,System.Net.Http=False,System.Runtime.InteropServices=False,System.Threading=False,VbWorkerServicePinvokeLauncher.CoreServices.NativeMethods=False,VbWorkerServicePinvokeLauncher.CoreServices.NativeMethods.Enums=False,VbWorkerServicePinvokeLauncher.CoreServices.NativeMethods.Methods=False,VbWorkerServicePinvokeLauncher.CoreServices.NativeMethods.Structs=False,VbWorkerServicePinvokeLauncher.CoreServices.ProcessManagement=False,Microsoft.VisualBasic=True,System=True,System.Collections=True,System.Collections.Generic=True,System.Diagnostics=True,System.Linq=True,System.Xml.Linq=True,System.Threading.Tasks=True,VbWorkerServicePinvokeLauncher=True</ImportedNamespaces>
+    <ImportedNamespaces>JetBrains.Annotations=False,Microsoft.Extensions.Configuration=False,Microsoft.Extensions.DependencyInjection=False,Microsoft.Extensions.Hosting=False,Microsoft.Extensions.Logging=False,System.Diagnostics.CodeAnalysis=False,System.IO=False,System.Net.Http=False,System.Runtime.InteropServices=False,System.Threading=False,VbWorkerServicePinvokeLauncher.CoreServices.NativeMethods=False,VbWorkerServicePinvokeLauncher.CoreServices.NativeMethods.Enums=False,VbWorkerServicePinvokeLauncher.CoreServices.NativeMethods.Methods=False,VbWorkerServicePinvokeLauncher.CoreServices.NativeMethods.Structs=False,VbWorkerServicePinvokeLauncher.CoreServices.ProcessManagement=False,VbWorkerServicePinvokeLauncher.Utilities=False,Microsoft.VisualBasic=True,System=True,System.Collections=True,System.Collections.Generic=True,System.Diagnostics=True,System.Linq=True,System.Xml.Linq=True,System.Threading.Tasks=True,VbWorkerServicePinvokeLauncher=True</ImportedNamespaces>
     <OptionStrict>On</OptionStrict>
   </PropertyGroup>
 
@@ -26,6 +26,7 @@
     <Import Include="VbWorkerServicePinvokeLauncher.CoreServices.NativeMethods.Methods" />
     <Import Include="VbWorkerServicePinvokeLauncher.CoreServices.NativeMethods.Structs" />
     <Import Include="VbWorkerServicePinvokeLauncher.CoreServices.ProcessManagement" />
+    <Import Include="VbWorkerServicePinvokeLauncher.Utilities" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2024.2.0" />
