added appsettings.md and fixed structures modifier

--- a/VbWorkerServicePinvokeLauncher/appsettings.json
+++ b/VbWorkerServicePinvokeLauncher/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "WorkerServiceSettings": {
-    "FilePath": "C:\\Users\\Owner\\Desktop\\ServiceTest\\WorkerService\\UnderWhatUser.exe"
+    "FilePath": "C:\\Users\\Owner\\Desktop\\ServiceTest\\ExampleExecutable\\VbUserAccountTypeChecker.exe"
   }
 }
